--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         <meta name="robots" content="noindex, nofollow" />
         <link rel="icon" href="/images/logo.svg" />
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
     <body>
@@ -17,6 +18,7 @@
 		{% include 'partials/footer.html.twig' %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
