feat(front): integration for header and footer

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer_logo">
         <img src="/images/logo.svg" alt="ImmoDemo Logo" /><br>
-        ImmoDemo
+        <div class="title">ImmoDemo</div>
     </div>
     <div class="footer_real">
         Design par
