--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -4,7 +4,7 @@
             <img src="/images/logo.svg" alt="ImmoDemo Logo" />
         </div>
         <div class="header_links">
-            <a href="#">Accueil</a>
+            <a href="/">Accueil</a>
             <a href="#">Recherche</a>
             <a href="#">À Propos</a>
         </div>
