--- a/assets/scss/modules/_header.scss
+++ b/assets/scss/modules/_header.scss
@@ -1,6 +1,6 @@
 .header {
   width: 80vw;
-  max-width: 1100px;
+  max-width: 930px;
   margin: 30px auto;
 
   .nav {
@@ -16,6 +16,7 @@
       color: var(--dark-blue);
       text-decoration: none;
       margin-right: 35px;
+      font-size: 14px;
     }
 
     .header_contact {
