feat(front): integration homepage top offers

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,6 +12,10 @@
   --header-height: 48px;
 }
 
+// Libs
+// ==================
+@import '/node_modules/tiny-slider/src/tiny-slider.scss';
+
 // Outils
 // ==================
 @import 'tools/typography';
