--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -30,5 +30,97 @@
             </form>
         </div>
     </div>
+
+    <div class="section topoffers">
+        <div class="wrapper">
+            <div class="wrapper_block">
+                <div class="text_section">
+                    <div class="title">Notre sélection</div>
+                    <div class="desc">Perles rares à vendre : plongez dans l'excellence de notre collection exclusive.</div>
+                </div>
+                <div class="btn_section">
+                    <a href="#">Voir nos offres</a>
+                </div>
+            </div>
+            <div class="wrapper_controls">
+                <div class="slidebar_section">
+                    <div class="slider"></div>
+                    <div class="slider"></div>
+                    <div class="slider"></div>
+                    <div class="slider"></div>
+                </div>
+                <div class="arrows_section">
+                    <div class="arrow-left"></div>
+                    <div class="arrow-right"></div>
+                </div>
+            </div>
+            <div class="wrapper_offers">
+                <div class="property-card" data-id="P001">
+                    <div class="container">
+                        <div class="photo">
+                            <a href="#">
+                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
+                            </a>
+                        </div>
+                        <div class="desc">
+                            <div class="title">
+                                <a href="#">Grand 4 pièces avec une belle terrasse</a>
+                            </div>
+                            <div class="price">320 000€</div>
+                            <div class="city">Nantes</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="property-card" data-id="P002">
+                    <div class="container">
+                        <div class="photo">
+                            <a href="#">
+                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
+                            </a>
+                        </div>
+                        <div class="desc">
+                            <div class="title">
+                                <a href="#">Grand appartement design avec terrasse</a>
+                            </div>
+                            <div class="price">280 000€</div>
+                            <div class="city">Treillières</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="property-card" data-id="P003">
+                    <div class="container">
+                        <div class="photo">
+                            <a href="#">
+                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
+                            </a>
+                        </div>
+                        <div class="desc">
+                            <div class="title">
+                                <a href="#">Appartement 3 pièces avec une belle terrasse</a>
+                            </div>
+                            <div class="price">350 000€</div>
+                            <div class="city">St. Sébastien sur Loire</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="property-card" data-id="P004">
+                    <div class="container">
+                        <div class="photo">
+                            <a href="#">
+                                <img src="https://picsum.photos/id/48/300/300" alt="titre" />
+                            </a>
+                        </div>
+                        <div class="desc">
+                            <div class="title">
+                                <a href="#">Magnifique duplex dans une villa privée</a>
+                            </div>
+                            <div class="price">280 000€</div>
+                            <div class="city">Rezé</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
