--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -44,17 +44,14 @@
             </div>
             <div class="wrapper_controls">
                 <div class="slidebar_section">
-                    <div class="slider"></div>
-                    <div class="slider"></div>
-                    <div class="slider"></div>
-                    <div class="slider"></div>
+                    <div class="slider" id="sliderbar-topoffer"></div>
                 </div>
                 <div class="arrows_section">
                     <div class="arrow-left"></div>
                     <div class="arrow-right"></div>
                 </div>
             </div>
-            <div class="wrapper_offers">
+            <div class="wrapper_offers" id="topoffers_slider">
                 <div class="property-card" data-id="P001">
                     <div class="container">
                         <div class="photo">
