--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -119,5 +119,22 @@
             </div>
         </div>
     </div>
+
+    <div class="section about-us" id="a-propos">
+        <div class="wrapper_block">
+            <div class="picture_section">
+                <img src="/images/pages/home/our-team-working.png" alt="Notre équipe qui travaille" id="team-working" />
+                <img src="/images/pages/home/dots-bg-about-us.png" alt="Image de fond" id="dot-background-au" />
+            </div>
+            <div class="text_section">
+                <div class="title">À Propos</div>
+                <div class="desc">
+                    <p>Nous sommes une entreprise qui connecte le monde de l'immobilier et de la finance. Nous proposons un service complet pour la vente et l'achat de biens immobiliers. Notre avantage réside dans une expérience de plus de 15 ans et une présence dans des emplacements attractifs à Nantes.</p>
+                    <p>Nous sommes en relation avec toutes les banques du marché européen, nous permettant de résoudre toutes les démarches rapidement. Grâce à une innovation constante dans nos activités, nous progressons et sommes en mesure de fournir des services réellement hors normes qui nous démarquent de la concurrence.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 {% endblock %}
