--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -6,7 +6,8 @@
         <div class="header_links">
             <a href="/">Accueil</a>
             <a href="#">Recherche</a>
-            <a href="#">À Propos</a>
+            <a href="/#a-propos">À Propos</a>
+            <a href="/#notre-equipe">Notre équipe</a>
         </div>
         <div class="header_contact">
             <a href="#">Contactez-nous</a>
