feat(front): integration homepage our team

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -136,5 +136,50 @@
         </div>
     </div>
 
+    <div class="section our-team" id="notre-equipe">
+        <!-- All photos have been generated thanks to thispersondoesnotexist.com -->
+        <div class="wrapper_block">
+            <div class="card">
+                <div class="photo">
+                    <img src="/images/pages/home/team/olivier.jpg" alt="Olivier Luile" />
+                </div>
+                <div class="name">Olivier Luile</div>
+                <div class="position">Directeur Immobilier</div>
+            </div>
+            <div class="card">
+                <div class="photo">
+                    <img src="/images/pages/home/team/pierre.jpg" alt="Pierre Lotissement" />
+                </div>
+                <div class="name">Pierre Lotissement</div>
+                <div class="position">Conseiller Immobilier Senior</div>
+            </div>
+            <div class="text_section">
+                <div class="title">Notre équipe</div>
+                <div class="desc">Rencontrez notre équipe dévouée, prête à concrétiser vos rêves immobiliers avec expertise et passion.</div>
+            </div>
+            <div class="card">
+                <div class="photo">
+                    <img src="/images/pages/home/team/marie.jpg" alt="Marie Maisonette" />
+                </div>
+                <div class="name">Marie Maisonette</div>
+                <div class="position">Responsable Marketing</div>
+            </div>
+            <div class="card">
+                <div class="photo">
+                    <img src="/images/pages/home/team/jeanne.jpg" alt="Jeanne Duprix" />
+                </div>
+                <div class="name">Jeanne Duprix</div>
+                <div class="position">Consultante en Financement</div>
+            </div>
+            <div class="card">
+                <div class="photo">
+                    <img src="/images/pages/home/team/alexandra.jpg" alt="Alexandra Visite" />
+                </div>
+                <div class="name">Alexandra Visite</div>
+                <div class="position">Assistante Commercial</div>
+            </div>
+        </div>
+    </div>
+
 </div>
 {% endblock %}
