--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -310,4 +310,49 @@
       }
     }
   }
+
+  .section.our-team {
+    width: 80vw;
+    max-width: 930px;
+    margin: 0 auto 100px;
+    position: relative;
+    .wrapper_block {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      .card, .text_section {
+        width: 30%;
+      }
+      .card {
+        background: var(--white);
+        border: 1px solid var(--light-blue);
+        border-radius: 3px;
+        box-shadow: 0 4px 20px 0 rgba(71,100,195,0.1);
+        margin-bottom: 20px;
+        padding: 40px 0;
+        text-align: center;
+        .photo img {
+          margin: 0 auto 10px;
+          width: 150px;
+          height: 150px;
+          object-fit: cover;
+          border-radius: 150px;
+        }
+        .name {
+          font-family: $font-alt;
+          font-weight: bold;
+        }
+        .position {
+          font-size: 14px;
+        }
+      }
+      .text_section .title {
+        font-size: 40px;
+        font-weight: bold;
+        line-height: 60px;
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
