--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -181,5 +181,55 @@
         </div>
     </div>
 
+    <div class="section references">
+        <div class="wrapper_block">
+            <div class="text_section">
+                <div class="title">Avis</div>
+                <div class="desc">Plongez dans l'expérience de nos clients satisfaits. Leurs témoignages reflètent notre engagement à dépasser vos attentes et à créer des histoires immobilières exceptionnelles.</div>
+            </div>
+            <div class="references_slider" id="references_slider">
+                <div class="card">
+                    <div class="container">
+                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
+                        <div class="name">Emerson Aminoff</div>
+                        <div class="home_title">3 bedroom apartment in Madrid</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="container">
+                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
+                        <div class="name">Emerson Aminoff</div>
+                        <div class="home_title">3 bedroom apartment in Madrid</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="container">
+                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
+                        <div class="name">Emerson Aminoff</div>
+                        <div class="home_title">3 bedroom apartment in Madrid</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="container">
+                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
+                        <div class="name">Emerson Aminoff</div>
+                        <div class="home_title">3 bedroom apartment in Madrid</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="container">
+                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
+                        <div class="name">Emerson Aminoff</div>
+                        <div class="home_title">3 bedroom apartment in Madrid</div>
+                    </div>
+                </div>
+            </div>
+            <div class="references_slider_dots">
+                {% for i in 0..2 %}
+                    <div class="dot"></div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
