--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -188,6 +188,7 @@
                 <div class="desc">Plongez dans l'expérience de nos clients satisfaits. Leurs témoignages reflètent notre engagement à dépasser vos attentes et à créer des histoires immobilières exceptionnelles.</div>
             </div>
             <div class="references_slider" id="references_slider">
+                {% for i in 1..5 %}
                 <div class="card">
                     <div class="container">
                         <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
@@ -195,39 +196,26 @@
                         <div class="home_title">3 bedroom apartment in Madrid</div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="container">
-                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
-                        <div class="name">Emerson Aminoff</div>
-                        <div class="home_title">3 bedroom apartment in Madrid</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="container">
-                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
-                        <div class="name">Emerson Aminoff</div>
-                        <div class="home_title">3 bedroom apartment in Madrid</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="container">
-                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
-                        <div class="name">Emerson Aminoff</div>
-                        <div class="home_title">3 bedroom apartment in Madrid</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="container">
-                        <div class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem. Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies pretium.</div>
-                        <div class="name">Emerson Aminoff</div>
-                        <div class="home_title">3 bedroom apartment in Madrid</div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <div class="references_slider_dots">
-                {% for i in 0..2 %}
+                {% for i in 1..3 %}
                     <div class="dot"></div>
                 {% endfor %}
+            </div>
+        </div>
+    </div>
+
+    <div class="section newsletter">
+        <div class="wrapper_block">
+            <div class="picto_section"></div>
+            <div class="text_section">
+                <div class="title">Abonnez-vous à notre newsletter</div>
+                <div class="desc">Recevez les dernières nouvelles et offres intéressantes</div>
+                <div class="form">
+                    <input type="email" placeholder="Votre adresse e-mail" />
+                    <input type="submit" value="S'abonner" id="newsletter-btn" />
+                </div>
             </div>
         </div>
     </div>
