--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -119,6 +119,14 @@
           position: absolute;
           background-size: contain;
         }
+        span.submit:hover:after {
+          animation: search 0.35s cubic-bezier(.39,.58,.57,1);
+        }
+        @keyframes search {
+          0% { transform: translateY(0); }
+          50% { transform: translateY(-3px); }
+          100% { transform: translateY(0); }
+        }
       }
     }
   }
@@ -159,6 +167,11 @@
             text-decoration: none;
             font-weight: bold;
             padding: 8px 14px;
+            transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          }
+          a:hover {
+            color: var(--white);
+            background: var(--blue);
           }
         }
       }
@@ -175,6 +188,7 @@
             background: var(--blue);
             height: 1.75px;
             width: calc(150px);
+            transition: width 0.15s ease-in-out;
           }
         }
         .arrows_section {
@@ -188,6 +202,10 @@
             border-radius: 55px;
             cursor: pointer;
             position: relative;
+            transition: background-color 0.15s ease-in-out;
+          }
+          .arrow-left:hover, .arrow-right:hover {
+            background: var(--dark-blue);
           }
           .arrow-left:after {
             content: "";
@@ -249,6 +267,7 @@
                   text-decoration: none;
                   font-weight: bold;
                   font-size: 18px;
+                  transition: color 0.25s cubic-bezier(.39,.58,.57,1);
                 }
               }
               .price {
@@ -258,6 +277,9 @@
               }
               .city { font-size: 14px; }
             }
+          }
+          .container:hover .desc .title a {
+            color: var(--blue);
           }
         }
       }
@@ -421,6 +443,7 @@
         background: #DADAEE;
         border-radius: 15px;
         cursor: pointer;
+        transition: background-color 0.15s cubic-bezier(.39,.58,.57,1);
       }
       .dot.tns-nav-active {
         background: var(--blue);
@@ -468,7 +491,12 @@
             padding: 8px 14px;
             width: 195px;
             font-size: 12px;
-            box-shadow: inset 0px 1px 5px 0px rgba(0,0,0,0.1);
+            box-shadow: inset 0 1px 5px 0 rgba(0,0,0,0.1);
+            transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          }
+          input[type="email"]:focus {
+            outline: none;
+            border: 1px solid var(--blue);
           }
           input[type="submit"] {
             color: var(--blue);
@@ -481,6 +509,11 @@
             font-size: 12px;
             margin-left: 9px;
             cursor: pointer;
+            transition: 0.25s cubic-bezier(.39,.58,.57,1);
+          }
+          input[type="submit"]:hover {
+            color: var(--white);
+            background: var(--blue);
           }
         }
       }
