--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,3 +1,4 @@
+{% set anchor_base = (app.request.get('_route') == 'home') ? '' : '/' %}
 <nav class="header" id="header">
     <div class="nav">
         <div class="header_logo">
@@ -6,8 +7,8 @@
         <div class="header_links">
             <a href="/">Accueil</a>
             <a href="#">Recherche</a>
-            <a href="/#a-propos">À Propos</a>
-            <a href="/#notre-equipe">Notre équipe</a>
+            <a href="{{anchor_base}}#a-propos">À Propos</a>
+            <a href="{{anchor_base}}#notre-equipe">Notre équipe</a>
         </div>
         <div class="header_contact">
             <a href="#">Contactez-nous</a>
