--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -24,7 +24,7 @@
                 <span class="location">
                     <input type="text" name="location" id="location" placeholder="Ville ou code postal" />
                 </span>
-                <span class="submit">
+                <span class="submit search-animation">
                     <input type="submit" value="Rechercher" />
                 </span>
             </form>
