fix(front): integration property page add slider & code refactoring

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -206,18 +206,6 @@
         </div>
     </div>
 
-    <div class="section newsletter">
-        <div class="wrapper_block">
-            <div class="picto_section"></div>
-            <div class="text_section">
-                <div class="title">Abonnez-vous à notre newsletter</div>
-                <div class="desc">Recevez les dernières nouvelles et offres intéressantes</div>
-                <div class="form">
-                    <input type="email" placeholder="Votre adresse e-mail" />
-                    <input type="submit" value="S'abonner" id="newsletter-btn" />
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include 'partials/newsletter.html.twig' %}
 </div>
 {% endblock %}
