--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -54,6 +54,19 @@
                     </div>
                 </div>
 
+                <div class="details_block">
+                    <div class="icon_group">
+                        <div class="type">
+                            Appartement
+                        </div>
+                        <div class="dimensions">
+                            224m2
+                        </div>
+                        <div class="location">
+                            Saint-Sébastien sur Loire
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="contact-details">
