--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -66,6 +66,29 @@
                             Saint-Sébastien sur Loire
                         </div>
                     </div>
+
+                    <div class="price_group">
+                        <div class="text_section">
+                            <div class="desc">Prix</div>
+                            <div class="title">380 000€</div>
+                        </div>
+                        <div class="button_section">
+                            <a href="#">Simuler mon prêt</a>
+                        </div>
+                    </div>
+
+                    <div class="description_group">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus eros et massa malesuada, in pretium ex mattis. Nunc auctor finibus urna, vel fermentum ligula dictum ut. Phasellus sed ex ac tellus tincidunt commodo. Pellentesque at blandit lorem, viverra accumsan ante. Donec eget iaculis purus, et vulputate est. Donec sit amet ullamcorper nisi. Morbi sed nisi condimentum, ullamcorper urna mattis, viverra neque. Vivamus egestas ligula vel pulvinar condimentum. Proin nibh lorem, malesuada tincidunt aliquet at, pellentesque eget neque. Vivamus aliquam leo enim, ac vehicula nibh lacinia sit amet. Praesent a ultrices lectus. Etiam finibus massa at lorem lacinia varius.</p>
+                        <p>Nullam eu lacus rhoncus, semper tellus vitae, viverra velit. Ut sed interdum ex. Sed ut velit magna. Suspendisse eu sagittis massa. Donec sodales gravida felis ornare porta. Sed blandit, leo sit amet molestie volutpat, neque diam dapibus libero, suscipit tincidunt eros lacus et dui. Morbi feugiat orci justo, quis tincidunt dolor euismod eget. Sed efficitur mauris ut odio pellentesque, at mollis tellus pulvinar. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur mollis aliquet tellus, a rutrum ipsum ullamcorper pulvinar. In augue turpis, aliquet sit amet lacinia maximus, viverra vitae dui. Vivamus rutrum, tellus ut bibendum dapibus, magna nibh aliquet tortor, non ultrices felis ipsum sit amet ipsum. Quisque sit amet mauris vitae urna varius bibendum et sit amet mauris.</p>
+                        <p>Mauris congue ligula vitae purus elementum semper. Nam molestie sem eget purus pharetra ultrices. Sed gravida nunc nulla, eu egestas lacus tempus in. Duis felis mauris, egestas cursus mi vitae, vulputate rhoncus enim. Vestibulum sagittis, tellus non consequat tempus, sapien nibh mollis turpis, ac tincidunt ex sapien vitae turpis. Integer venenatis mollis vulputate. Donec non lobortis libero.</p>
+                        <p>Vivamus a egestas dolor. Praesent porta diam mauris, a molestie libero volutpat eget. In maximus eros at est interdum tincidunt. Vivamus eget metus velit. Sed fringilla ultricies eros molestie viverra. Aenean id gravida massa, vel luctus eros. Pellentesque mollis posuere ullamcorper. Aliquam pellentesque dui ex, vitae ornare ante condimentum eget. Donec velit turpis, interdum at tincidunt quis, maximus ut nisl. Sed sit amet sodales eros. Nam faucibus eros quis dolor facilisis, sit amet tempor leo imperdiet. Vestibulum sed enim sapien.</p>
+                        <p>Praesent maximus augue in elementum ullamcorper. Etiam gravida, odio vitae cursus placerat, lorem nibh eleifend augue, sed cursus sem ipsum at quam. Vivamus ultrices ligula ut neque mollis, nec viverra odio rhoncus. Curabitur eleifend accumsan dui eu ornare. Mauris vitae turpis at odio tincidunt maximus. Sed facilisis lectus lectus, eu egestas sapien consectetur eu. Nunc sodales leo metus, id tincidunt quam laoreet in. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec quam dui, porttitor quis dolor a, aliquam venenatis lacus. Praesent rutrum erat vitae nibh tincidunt, et ultrices orci consectetur. Vestibulum interdum elementum neque nec finibus. Praesent a massa maximus, facilisis sem ac, tincidunt lacus. Aenean viverra bibendum tortor id elementum. </p>
+                    </div>
+
+                    <div class="map_group">
+                        <!-- TODO: Add a real map w/ OpenStreetMap & Leaflet -->
+                        MyMap
+                    </div>
                 </div>
             </div>
 
