feat(front): add interactive map to property page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -14,7 +14,8 @@
 
 // Libs
 // ==================
-@import '/node_modules/tiny-slider/src/tiny-slider.scss';
+@import 'tiny-slider/dist/tiny-slider.css';
+@import 'leaflet/dist/leaflet.css';
 
 // Outils
 // ==================
