--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -86,8 +86,7 @@
                     </div>
 
                     <div class="map_group">
-                        <!-- TODO: Add a real map w/ OpenStreetMap & Leaflet -->
-                        MyMap
+                        <div id="map"></div>
                     </div>
                 </div>
             </div>
