--- a/assets/scss/pages/_property.scss
+++ b/assets/scss/pages/_property.scss
@@ -188,6 +188,14 @@
             box-shadow: 0 4px 20px 0 rgba(71,100,195,0.1);
             border-radius: 3px;
             margin-top: 40px;
+            position: relative;
+            #map {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
       }
