feat(front): add contact form on property page

--- a/templates/pages/property.html.twig
+++ b/templates/pages/property.html.twig
@@ -94,6 +94,33 @@
             <div class="contact-details">
                 <div class="contact-form">
                     <div class="title">Contactez-nous</div>
+                    <div class="form">
+                        <label>
+                            Nom
+                            <input type="text" name="full-name" placeholder="Votre nom complet" />
+                        </label>
+                        <label>
+                            Téléphone
+                            <input type="text" name="phone" placeholder="Téléphone" />
+                        </label>
+                        <label>
+                            Email
+                            <input type="email" name="email" placeholder="Email" />
+                        </label>
+                        <label>
+                            Votre message
+                            <textarea name="message" id="" rows="10" placeholder="Votre message"></textarea>
+                        </label>
+                        <label>
+                            <div class="checkbox_data">
+                                <input type="checkbox" name="data" id="data" />
+                                <div class="label_data">
+                                     J’accepte le traitement de mes <a href="#">données personnelles</a>.
+                                </div>
+                            </div>
+                        </label>
+                        <input type="submit" value="Envoyer" id="contact-btn" />
+                    </div>
                 </div>
             </div>
         </div>
