--- a/assets/scss/pages/_property.scss
+++ b/assets/scss/pages/_property.scss
@@ -206,6 +206,60 @@
 
         .contact-form {
           background: var(--light-blue);
+          border-radius: 3px;
+          padding: 20px 20px 30px;
+          .title {
+            font-size: 21px;
+            font-weight: bold;
+            margin-bottom: 21px;
+          }
+          .form {
+            label {
+              font-size: 14px;
+            }
+            input[type="text"], input[type="email"], textarea {
+              width: calc(100% - 26px);
+              background: var(--white);
+              border: 1px solid #DDD;
+              border-radius: 3px;
+              font-family: $font;
+              font-size: 14px;
+              padding: 13px;
+              letter-spacing: 0.5px;
+              margin-bottom: 15px;
+              box-shadow: inset 0 1px 5px 0 rgba(0,0,0,0.1);
+            }
+            textarea { resize: none; }
+            .checkbox_data { display: flex; }
+            input[type="checkbox"] {
+              width: 18px;
+              height: 18px;
+              margin: 0 8px 0 0;
+              accent-color: var(--blue);
+            }
+            .label_data {
+              margin-top: -1px;
+              margin-bottom: 20px;
+              width: calc(100% - 26px);
+              a { color: var(--blue); }
+            }
+            input[type="submit"] {
+              background: none;
+              border: 2px solid var(--blue);
+              color: var(--blue);
+              border-radius: 3px;
+              width: 100%;
+              font-size: 13px;
+              font-weight: bold;
+              padding: 11px;
+              cursor: pointer;
+              transition: 0.25s cubic-bezier(0.39, 0.58, 0.57, 1);
+            }
+            input[type="submit"]:hover {
+              color: var(--white);
+              background: var(--blue);
+            }
+          }
         }
       }
     }
